# restapi/operations/find_languages_responses.go
@@ -1,0 +1,88 @@
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-swagger/go-swagger/httpkit"
+
+	"github.com/gophergala2016/wwcdc_01/models"
+)
+
+/*FindLanguagesOK languages response
+
+swagger:response findLanguagesOK
+*/
+type FindLanguagesOK struct {
+
+	// In: body
+	Payload []string `json:"body,omitempty"`
+}
+
+// NewFindLanguagesOK creates FindLanguagesOK with default headers values
+func NewFindLanguagesOK() *FindLanguagesOK {
+	return &FindLanguagesOK{}
+}
+
+// WithPayload adds the payload to the find languages o k response
+func (o *FindLanguagesOK) WithPayload(payload []string) *FindLanguagesOK {
+	o.Payload = payload
+	return o
+}
+
+// WriteResponse to the client
+func (o *FindLanguagesOK) WriteResponse(rw http.ResponseWriter, producer httpkit.Producer) {
+
+	rw.WriteHeader(200)
+	if err := producer.Produce(rw, o.Payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*FindLanguagesDefault unexpected error
+
+swagger:response findLanguagesDefault
+*/
+type FindLanguagesDefault struct {
+	_statusCode int
+
+	// In: body
+	Payload *models.ErrorModel `json:"body,omitempty"`
+}
+
+// NewFindLanguagesDefault creates FindLanguagesDefault with default headers values
+func NewFindLanguagesDefault(code int) *FindLanguagesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &FindLanguagesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the find languages default response
+func (o *FindLanguagesDefault) WithStatusCode(code int) *FindLanguagesDefault {
+	o._statusCode = code
+	return o
+}
+
+// WithPayload adds the payload to the find languages default response
+func (o *FindLanguagesDefault) WithPayload(payload *models.ErrorModel) *FindLanguagesDefault {
+	o.Payload = payload
+	return o
+}
+
+// WriteResponse to the client
+func (o *FindLanguagesDefault) WriteResponse(rw http.ResponseWriter, producer httpkit.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
